# python-analyzer

./: .gitignore  .mega-linter.yml  README.md  package-lock.json  package.json  pyproject.toml
.github/: contributing.md  dependabot.yml
.github/workflows/: mega-linter.yml  pr-format.yml
library_analyzer/: all_callables_in_library.py  analyze_public_api.py  call_and_parameter_counter.py  cli.py  main.py
library_analyzer/commands/find_usages/: __init__.py  _ast_visitor.py  _find_usages.py  _model.py
library_analyzer/commands/get_api/: _ast_visitor.py  _get_api.py  _model.py
library_analyzer/commands/get_public_api/: __init__.py  _ast_visitor.py  _get_public_api.py  _model.py  _package_metadata.py
library_analyzer/commands/improve/: __init__.py  _call_and_parameter_counter.py
library_analyzer/commands/suggest_improvements/: __old_call_and_parameter_counter.py  _call_and_parameter_counter.py  _suggest_improvements.py
library_analyzer/improve_command/: _call_and_parameter_counter.py
library_analyzer/utils/: _ASTWalker.py  __init__.py  _file_walker.py  _files.py  _get_public_api.py  _qnames.py
python_analyzer/commands/find_usages/: _find_usages.py
python_analyzer/commands/get_api/: _ast_visitor.py  _get_api.py  _model.py  _package_metadata.py
python_analyzer/commands/suggest_improvements/: __old_call_and_parameter_counter.py  _suggest_improvements.py
