[tool.poetry]
name = "library-analyzer"
version = "0.0.1"
description = "Analyze Python code."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"

[tool.poetry.scripts]
library-analyzer = "library_analyzer.main:main"

[tool.poetry.dependencies]
python = "^3.9"
astroid = "^2.8.0"
scikit-learn = "^0.24.2"
importlib-metadata = "^4.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
